# human-humanoid-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_cn.md  framework.md  pyproject.toml
assets/motions/.hhtools_analysis/: manifest_handcrafted.json  manifest_pae.json
assets/motions/intermimic/OMOMO/sub10_largebox_000/: sub10_largebox_000.pkl
assets/motions/intermimic/OMOMO/sub12_woodchair_000/: sub12_woodchair_000.pkl
assets/motions/meshmimic/holosoma/: source.yaml
assets/motions/meshmimic/holosoma/parkour_1/: parkour_1.pkl
assets/motions/meshmimic/holosoma/parkour_2/: parkour_2.pkl
assets/motions/meshmimic/holosoma/parkour_3/: parkour_3.pkl
assets/motions/meshmimic/holosoma/parkour_4/: parkour_4.pkl
assets/motions/meshmimic/holosoma/parkour_5/: parkour_5.pkl
assets/motions/meshmimic/parc_ms/BOXES_0_0_opt_dm_dm/: BOXES_0_0_opt_dm_dm.pkl
assets/motions/meshmimic/parc_ms/BOXES_1_0_opt_dm_dm/: BOXES_1_0_opt_dm_dm.pkl
assets/motions/meshmimic/parc_ms/beyond_reverse_vault_003_aug001_dm_aug8/: beyond_reverse_vault_003_aug001_dm_aug8.pkl
assets/motions/meshmimic/parc_ms/beyond_speed_vault_005_aug007_flipped_dm_aug1/: beyond_speed_vault_005_aug007_flipped_dm_aug1.pkl
assets/motions/meshmimic/parc_ms/dec2024_teaser_0_0_opt_dm/: dec2024_teaser_0_0_opt_dm.pkl
assets/motions/meshmimic/parc_ms/dec2024_teaser_2000_0_opt_dm/: dec2024_teaser_2000_0_opt_dm.pkl
assets/motions/meshmimic/parc_ms/dec2024_teaser_500_0_opt_dm/: dec2024_teaser_500_0_opt_dm.pkl
assets/motions/mimic/GVHMR/: hmr4d_results.pt
assets/motions/mimic/LAFAN/: D0429_侧空翻__01_Sk00_144.bvh  D0429_后空翻__01_Sk00_146.bvh
assets/motions/mimic/MOCAP/: D0429_前空翻__01_Sk00_148.bvh  D0429_毽子后空翻__01_Sk00_149.bvh  D0429_踢月转体__01_Sk00_143.bvh
assets/motions/mimic/Motion-X/: Aerial_Kick_Kungfu_wushu_3_clip2.npy
assets/motions/mimic/Xsens_mocap/: walk.bvh
assets/reference_poses/: glb_zero_frame0.npz  lafan_zero_frame0.bvh  mocap_zero_frame0.bvh
configs/analysis/: catalog.yaml  default.yaml
configs/robots/_template/: robot.yaml
configs/robots/unitree_g1/: g1_29dof.urdf  retarget_calibration.yaml  retarget_calibration_fbx.yaml  retarget_calibration_glb.yaml  retarget_calibration_gvhmr.yaml  retarget_calibration_lafan_bvh.yaml  retarget_calibration_mocap_bvh.yaml  retarget_calibration_smpl.yaml  retarget_calibration_smplx.yaml  retarget_calibration_soma_bvh.yaml  retarget_calibration_xsens_mocap.yaml  robot.g1_29dof.yaml  robot.g1_29dof_with_hand.yaml
docs/: PAGES.md
docs/assets/js/: site.js
hhtools/analysis/: clip.py  collection.py  config.py
hhtools/cli/: convert.py  main.py  retarget.py  robot.py
hhtools/core/: grounding.py  motion.py
hhtools/core/math/: rotation.py
hhtools/io/: base.py  bvh.py  bvh_detect.py  fbx.py  mimic_detect.py  npz.py  parc_ms_skeleton.py  robot_csv.py
hhtools/io/datasets/: amass.py  bvh_folder.py  glb_folder.py  parc_ms.py
hhtools/retarget/: robot_to_robot.py
hhtools/retarget/calibration/: __init__.py  calibration.py  reference.py
hhtools/retarget/interaction_mesh/: config.py  mpc_loop.py  pipeline.py
hhtools/retarget/newton_basic/: config.py  feet_stabilizer.py  human_aliases.py  pipeline.py  rest_pose.py  scaler.py
hhtools/robot/: joint_scales.py  kinematics.py  retarget_profile.py  scaffold.py  standing_height.py  urdf_normalize.py  yaml_io.py
hhtools/viewer/: app.py  cache.py  library.py
hhtools/web/: batch_failure_log.py  calibration_session.py  dataset_analysis.py  export_bundle.py  motion_library_links.py  motion_progress.py  r2r_export_bundle.py  r2r_scene.py  r2r_upload_resolve.py  scaled_preview.py  serialize.py  server.py  upload_resolve.py
hhtools/web/static/: app.js  dataset_viz.js  index.html  style.css  tutorial.js
scripts/: batch_dec_release_to_parc_ms.py  batch_robot_audit.py  make_reference_pose_bvh.py
